fixed #8 (added download log feature)

--- a/log_viewer/locale/id/LC_MESSAGES/django.po
+++ b/log_viewer/locale/id/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-11 05:23+0700\n"
+"POT-Creation-Date: 2020-09-01 13:55+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -23,21 +23,30 @@ msgid "Home"
 msgstr "Beranda"
 
 #: templates/log_viewer/logfile_viewer.html:8
-msgid "Log Viewer"
-msgstr "Penampil Log"
+#: templates/log_viewer/logfile_viewer.html:39
+msgid "Django Log Viewer"
+msgstr "Penampil Log Django"
 
 #: templates/log_viewer/logfile_viewer.html:32
 msgid "Log Files"
 msgstr "File log"
 
 #: templates/log_viewer/logfile_viewer.html:41
+msgid "Download all Log Files"
+msgstr "Unduh seluruh File Log"
+
+#: templates/log_viewer/logfile_viewer.html:42
+msgid "Download this Log File"
+msgstr "Unduh File Log ini"
+
+#: templates/log_viewer/logfile_viewer.html:48
 msgid "No."
 msgstr "No."
 
-#: templates/log_viewer/logfile_viewer.html:42
+#: templates/log_viewer/logfile_viewer.html:49
 msgid "Log entries"
 msgstr "Entri log"
 
-#: templates/log_viewer/logfile_viewer.html:46
+#: templates/log_viewer/logfile_viewer.html:53
 msgid "No entries!"
 msgstr "Tidak ada entri!"
